// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  class="storybook-button storybook-button--large storybook-button--secondary"
  type="button"
/>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--primary"
  type="button"
/>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  class="storybook-button storybook-button--medium storybook-button--secondary"
  type="button"
/>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  class="storybook-button storybook-button--small storybook-button--secondary"
  type="button"
/>
`;
